CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MACOSX_RPATH ON)

PROJECT(Myia CXX C)

LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/tbb/lib")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/tbb/include")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/torch7/lib")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/torch7/lib/TH")

ADD_EXECUTABLE(myia myia.cpp)
TARGET_LINK_LIBRARIES(myia "TH" "tbb")
SET_PROPERTY(TARGET myia PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET myia PROPERTY CXX_STANDARD_REQUIRED ON)
